@@ -1,3 +1,7 @@
+29/11/2016:
+	- Another update to IIIF aspect ratio code
+
+
 28/11/2016:
 	- Update to aspect ratio code for sizes exceeding max CVT limit
 
